--- a/pom.xml
+++ b/pom.xml
@@ -53,8 +53,9 @@
                     </dependency>
                     <dependency>
                         <groupId>org.junit.jupiter</groupId>
-                        <artifactId>junit-jupiter-engine</artifactId>
-                        <version>5.1.0</version>
+                        <artifactId>junit-jupiter</artifactId>
+                        <version>5.6.2</version>
+                        <scope>test</scope>
                     </dependency>
                 </dependencies>
             </plugin>
@@ -63,6 +64,18 @@
 
     <dependencies>
 
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>RELEASE</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
