--- a/pom.xml
+++ b/pom.xml
@@ -53,9 +53,8 @@
                     </dependency>
                     <dependency>
                         <groupId>org.junit.jupiter</groupId>
-                        <artifactId>junit-jupiter</artifactId>
-                        <version>5.6.2</version>
-                        <scope>test</scope>
+                        <artifactId>junit-jupiter-engine</artifactId>
+                        <version>5.1.0</version>
                     </dependency>
                 </dependencies>
             </plugin>
